WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277955
Release assert in TimerBase::setNextFireTime via DispatchWorkItem::~DispatchWorkItem
https://bugs.webkit.org/show_bug.cgi?id=277955
Summary
Release assert in TimerBase::setNextFireTime via DispatchWorkItem::~DispatchW...
Ryosuke Niwa
Reported
2024-08-12 09:37:03 PDT
We release assert in TimerBase::setNextFireTime because we try to destruct the Document / Node in a background thread.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-08-12 09:41:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32041
EWS
Comment 2
2024-08-12 12:08:37 PDT
Committed
282128@main
(46c9caf0ef79): <
https://commits.webkit.org/282128@main
> Reviewed commits have been landed. Closing PR #32041 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-08-12 12:09:16 PDT
<
rdar://problem/133703498
>
EWS
Comment 4
2024-08-13 10:53:23 PDT
Committed
280938.223@safari-7619-branch
(6948b6fd53b3): <
https://commits.webkit.org/280938.223@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1591 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug