Cherry-pick 46c9caf0ef79. rdar://133365786

Release assert in TimerBase::setNextFireTime via DispatchWorkItem::~DispatchWorkItem
    https://bugs.webkit.org/show_bug.cgi?id=277955

    Reviewed by Chris Dumez and Wenson Hsieh.

    The release assert was hit because we were trying to destruct Document in a background thread.
    Fixed the bug by destructing the document and other main-thread only objects in the main thread.

    * Source/WebCore/editing/cocoa/DataDetection.mm:
    (WebCore::DataDetection::detectContentInFrame):

    Canonical link: https://commits.webkit.org/282128@main

Canonical link: https://commits.webkit.org/280938.223@safari-7619-branch